--- a/.infrastructure/mysql/statefulSet.yml
+++ b/.infrastructure/mysql/statefulSet.yml
@@ -64,6 +64,29 @@ spec:
       - name: config-map
         configMap:
           name: mysql
+      tolerations:
+      - key: "app"
+        operator: "Equal"
+        value: "mysql"
+        effect: "NoSchedule"
+      affinity:
+        podAntiAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            - labelSelector:
+                matchExpressions:
+                  - key: "app"
+                    operator: In
+                    values:
+                    - mysql
+              topologyKey: "kubernetes.io/hostname"
+        nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+              - matchExpressions:
+                  - key: "app"
+                    operator: In
+                    values:
+                    - "mysql"
   volumeClaimTemplates:
   - metadata:
       name: data
