--- a/cluster.yml
+++ b/cluster.yml
@@ -60,19 +60,19 @@ nodes:
     - hostPath: /tmp
       containerPath: /data
   labels:
-    app: kube2py
+    app: todoapp
 - role: worker
   extraMounts:
     - hostPath: /tmp
       containerPath: /data
   labels:
-    app: kube2py
+    app: todoapp
 - role: worker
   extraMounts:
     - hostPath: /tmp
       containerPath: /data
   labels:
-    app: kube2py
+    app: todoapp
 - role: worker
   extraMounts:
     - hostPath: /tmp
