--- a/.infrastructure/app/deployment.yml
+++ b/.infrastructure/app/deployment.yml
@@ -17,6 +17,7 @@ spec:
       labels:
         app: todoapp
     spec:
+      serviceAccountName: secrets-reader
       containers:
       - name: todoapp
         image: ikulyk404/todoapp:4.0.1
