--- a/.github/workflows/validate-helm-chart.yml
+++ b/.github/workflows/validate-helm-chart.yml
@@ -6,8 +6,6 @@ on:
   pull_request:
     branches: ["main"]
 
-  workflow_dispatch:
-
 jobs:
   validate-helm:
     runs-on: ubuntu-latest
@@ -17,12 +15,12 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Helm tool installer
-      uses: Azure/setup-helm@v3
+      uses: Azure/setup-helm@v4.2.0
 
     - name: Helm Lint
       run: |
-        helm lint helm-charts/mateapp
+        helm lint helm-charts/todoapp
 
     - name: Helm Template
       run: |
-        helm template helm-charts/mateapp -f helm-charts/mateapp/values.yaml
+        helm template helm-charts/todoapp -f helm-charts/todoapp/values.yaml
