--- a/.github/workflows/validate-helm-chart.yml
+++ b/.github/workflows/validate-helm-chart.yml
@@ -21,6 +21,8 @@ jobs:
       run: |
         if [ ! -f output.log ]; then
           echo "output.log is not present"
+          echo "Deploy helm chart to your `kind` cluster
+          Run command `kubectl get all,cm,secret,ing -A` put the output in a file called `output.log` in a root of the repository"
           exit 1
         fi
 
@@ -30,10 +32,10 @@ jobs:
         if ! grep -q "name: mysql" .infrastructure/helm-chart/todoapp/Chart.yaml; then
           echo "MYSQL dependency is not present"
           echo "Inside the Chart.yaml file of todoapp chart, add lines
-          ```
-          dependencies:
-          - name: mysql
-          ```"
+            ```
+            dependencies:
+            - name: mysql
+            ```"
           exit 1
         fi
 
