--- a/.github/workflows/validate-helm-chart.yml
+++ b/.github/workflows/validate-helm-chart.yml
@@ -32,10 +32,8 @@ jobs:
         if ! grep -q "name: mysql" .infrastructure/helm-chart/todoapp/Chart.yaml; then
           echo "MYSQL dependency is not present"
           echo "Inside the Chart.yaml file of todoapp chart, add lines
-            ```
-            dependencies:
-            - name: mysql
-            ```"
+          dependencies:
+          - name: mysql"
           exit 1
         fi
 
