--- a/.github/workflows/validate-helm-chart.yml
+++ b/.github/workflows/validate-helm-chart.yml
@@ -20,11 +20,9 @@ jobs:
     - name: output.log is present
       run: |
         if [ ! -f output.log ]; then
-          cat << EOF
-          output.log is not present
-          Deploy helm chart to your `kind` cluster
-          Run command `kubectl get all,cm,secret,ing -A` put the output in a file called `output.log` in a root of the repository
-          EOF
+          echo 'output.log is not present'
+          echo 'Deploy helm chart to your `kind` cluster'
+          echo 'Run command `kubectl get all,cm,secret,ing -A` put the output in a file called `output.log` in a root of the repository'
           exit 1
         fi
 
@@ -32,12 +30,10 @@ jobs:
       if: always()
       run: |
         if ! grep -q "name: mysql" .infrastructure/helm-chart/todoapp/Chart.yaml; then
-          cat << EOF
-          MYSQL dependency is not present
-          Inside the Chart.yaml file of todoapp chart, add lines
-          dependencies:
-          - name: mysql
-          EOF
+          echo 'MYSQL dependency is not present'
+          echo 'Inside the Chart.yaml file of todoapp chart, add lines'
+          echo 'dependencies:'
+          echo '- name: mysql'
           exit 1
         fi
 
