--- a/.github/workflows/validate-helm-chart.yml
+++ b/.github/workflows/validate-helm-chart.yml
@@ -62,3 +62,10 @@ jobs:
       if: always()
       run: |
         helm template .infrastructure/helm-chart/todoapp -f .infrastructure/helm-chart/todoapp/values.yaml
+        
+    - uses: actions/setup-python@v5
+      with:
+        python-version: '3.10' 
+        
+    - run: python .github/workflows/scripts/validate-output.py
+      
