--- a/.github/workflows/validate-helm-chart.yml
+++ b/.github/workflows/validate-helm-chart.yml
@@ -6,6 +6,8 @@ on:
   pull_request:
     branches: ["main"]
 
+  workflow_dispatch:
+
 jobs:
   validate-helm:
     runs-on: ubuntu-latest
@@ -66,6 +68,8 @@ jobs:
     - uses: actions/setup-python@v5
       with:
         python-version: '3.10' 
-        
-    - run: python .github/workflows/scripts/validate-output.py
+
+    - name: Validate Output    
+      run: |
+        python .github/workflows/scripts/validate-output.py
       
