--- a/.github/workflows/validate-helm-chart.yml
+++ b/.github/workflows/validate-helm-chart.yml
@@ -66,10 +66,12 @@ jobs:
         helm template .infrastructure/helm-chart/todoapp -f .infrastructure/helm-chart/todoapp/values.yaml
         
     - uses: actions/setup-python@v5
+      if: always()
       with:
         python-version: '3.10' 
 
     - name: Validate Output    
+      if: always()
       run: |
         python .github/workflows/scripts/validate-output.py
       
